--- a/register-page.html
+++ b/register-page.html
@@ -18,7 +18,7 @@
 	
 	<div class="registercard">
 	<div class="align"> 
-	<div class="bordur"><h1>Register</h1></div>   <a href="LogIN-page.html"><h1> Log in</h1></a> </div>
+	<div class="bordur"><h1>Register</h1></div>   <a href="login-page.html"><h1> Log in</h1></a> </div>
 	<h3> Welcome buddy! </h3>
 	<div class="align"> <h5> Name </h5> <h5> Surname</h5> </div>
 	<div class="align"> <h3>Birth:</h3> <h2>Day</h2> <h2>Months</h2> <h7>Years</h7></div>
