--- a/product-page.html
+++ b/product-page.html
@@ -30,7 +30,7 @@
                 <ul class="list-inline">
                  <a href="register-page.html"><i class="fas fa-user"></i> </a> 
                  <a href="wishlist.html"><i class="far fa-heart"></i> </a>
-                 <a href="basket.html"><i class="fas fa-shopping-bag"></i> </a>
+                 <a href="basket-page.html"><i class="fas fa-shopping-bag"></i> </a>
           </ul>
             </div>
 
@@ -66,6 +66,8 @@
      </div>
 
 
+
+
  <div class="cards-little">
      <div class="card-little"> 
      <img src="images/image1.jpeg" alt="Airmaxplus">
@@ -81,56 +83,58 @@
 
 
 
-<div class="container">
-<h2> Other products that may interest you...</h2>
+<div class="container-product">
 
+<div class="card-interest">
+<h2> Other products that may interest you...</h2>
+</div>
  
- <div class="cards">
+ <div class="cards-product">
 
      <div class="card-green"> 
-     <ul class=list-inline>
+     <ul class=list-inline-product>
      <li><h3> Nike</h3></li>
      <a href="#"><i class="far fa-heart"></i></a>
      <li> <img src="images/TNbleu.png" alt="TN bleu"></li>
      <li> <h3>Air Max plus </h3></li>
-     <li> <h4>Size 45</h4></li>
-     <h2 class="price"> 110€</h2> 
+     <li> <h5>Size 45</h5></li>
+     <h2 class="price-product"> 110€</h2> 
      </ul>
      </div>
 
-
      <div class="card-green"> 
-     <ul class=list-inline>
+     <ul class=list-inline-product>
      <li><h3>Converse</h3></li>
      <a href="#"><i class="far fa-heart"></i></a>
      <img src="images/Conversechuck.jpeg" alt="Conversechuck">
-     <li> <h3>Converse Chuck </h3></li>
-     <li> <h4>Size 37</h4></li>
-     <h2 class="price"> 50€</h2> 
+     <li> <h3>Converse Chuck</h3></li>
+     <li> <h5>Size 37</h5></li>
+     <h2 class="price-product"> 50€</h2> 
      </ul>
      </div>
 
 
      <div class="card-green"> 
-     <ul class=list-inline>
+     <ul class=list-inline-product>
      <li><h3>Nike</h3></li>
      <a href="#"><i class="far fa-heart"></i></a>
      <img src="images/Airmaxone.png" alt="Airmaxone">
      <li> <h3> Air Max One </h3></li>
-     <li> <h4>Size 39/42</h4></li>
-     <h2 class="price"> 50€</h2>
+     <li> <h5>Size 39/42</h5></li>
+     <h2 class="price-product"> 50€</h2>
+     </ul>
      </div>
 
 
       <div class="card-green"> 
-     <ul class=list-inline>
+     <ul class=list-inline-product>
      <li><h3>New Balance</h3></li>
      <a href="#"><i class="far fa-heart"></i></a>
      <img src="images/Reebok550.png" alt="Reebok550">
      <li> <h3> 550 </h3></li>
-     <li> <h4>Size 40</h4></li>
-     <h2 class="price"> 70€</h2>
-     </div>
+     <li> <h5>Size 40</h5></li>
+     <h2 class="price-product"> 70€</h2>
+     </ul>
     </div>
 
  </div>
