--- a/basket.html
+++ b/basket.html
@@ -39,31 +39,30 @@
 
  	<div class="container">
 
-   
+   <div class="card-basket">
  	<h1>Your current basket	<a href="#"><i class="fas fa-shopping-cart"></i></a> </h1> 
-   
+   </div>
 
-   <div class="bordure">
+   <div class="bordure-basket">
    	
    </div> 
    	
-   
-   <div class="Price">
-   	    <h2>Price</h2>
-   </div>
+ <div class="basket-price">
+  <h2>Price</h2>
+  </div>
 
  	<div class="box-black">
 
 
       <img src="images/tshirt.jpg" alt="TshirtC"> 
-     <ul class="list-clothes">
+      <ul class="list-clothes">
      	<h3>Carhartt</h3>
      	<li>Stripped T-shirt</li>
      	<li>Size M<li>
      </ul>
      <div class="Price-number"><h4>21€</h4></div>
-
      </div>
+
 
     <div class="box-jean">
 
@@ -73,7 +72,6 @@
      	<li>Regular Jeans</li>
      	<li>Size W32</li>
      </ul>
-
      <div class="Price-number"><h4>37€</h4></div>
      </div>
 
@@ -123,7 +121,8 @@
 
  
  <div class="Sub-total">
-   <div class="alignement"> <a href="register-page.html"><h2> Sub-total (2 articles) : </h2></a> <div class="Price-number"><h4>58€</h4></div>  </div>
+   <div class="alignement"> <a href="register-page.html"> <h2> Sub-total (2 articles) : </h2></a>  <div class="Price-number"><h4>58€</h4></div>  
+ </div>
 </div>
 
  </body>
